# baccarat-calculator

./: .gitignore  AGENTS.md  Cargo.toml  README.md  skills-lock.json
crates/calculator/: Cargo.toml  README.md
crates/calculator/benches/: pure_rust_calculator.rs
crates/calculator/src/: bet_registry.rs  ev.rs  lib.rs  mode_contract.rs  odds.rs  probability.rs  settlement.rs  shoe.rs  terminal.rs
crates/calculator/tests/: default_odds.rs  standard_baccarat_contract.rs
crates/calculator/tests/fixtures/: source_standard_8_deck.rs  source_standard_8_deck_variants.rs  standard_baccarat_golden.rs
crates/types/: Cargo.toml
crates/types/src/: baccarat.rs
