[package]
name = "calculator"
edition.workspace = true
license.workspace = true
publish.workspace = true
version.workspace = true

[dependencies]
rust_decimal = { version = "1.36.0", features = ["serde"] }
serde = { workspace = true, features = ["derive"] }
types = { path = "../types" }

[dev-dependencies]
serde_json = { workspace = true }
