[package]
name = "calculator"
edition.workspace = true
license.workspace = true
publish.workspace = true
version.workspace = true

[dependencies]
rust_decimal = { version = "1.36.0", features = ["serde"] }
serde = { workspace = true, features = ["derive"] }
types = { path = "../types" }

[dev-dependencies]
criterion = "0.7.0"
serde_json = { workspace = true }

[[bench]]
name = "pure_rust_calculator"
harness = false
